modified the structure of the ArrowConversation class